# advent-of-code-2022

./: LICENSE
2021/day_1/: Cargo.toml
2021/day_1/src/: main.rs
2021/day_1_pm/: Cargo.toml
2021/day_1_pm/src/: lib.rs
day01/: Dockerfile
day01/src/: main.rs  solution.rs
day01_gr/: prog.gr
day01_rust/: Cargo.toml  Makefile
day01_rust/src/: solution.rs
day02/: Dockerfile  old_Dockerfile
day02/src/: main.rs  solution.rs
day03/: README.md
day03/src/: main.rs  solution.rs
day04/src/: main.rs  solution.rs
day05/: Dockerfile
day05/src/: main.rs  solution.rs
day06/src/: main.rs  solution.rs
day07/: Cargo.toml  output.txt
day07/src/: main.rs  solution.rs
day08/: .dockerignore
day08/src/: main.rs  solution.rs
day09/: README.md
day09/src/: main.rs  solution.rs
day10/src/: main.rs  solution.rs
day11/src/: main.rs  solution.rs
day12/src/: main.rs  solution.rs
day13/src/: main.rs  solution.rs
day14/src/: main.rs  solution.rs
day15/src/: main.rs  solution.rs
day16/src/: main.rs  solution.rs
day21/src/: main.rs  solution.rs
day_2021_03/src/: main.rs  solution.rs
dayxx/: Cargo.toml  Dockerfile  test.txt
dayxx/src/: main.rs  solution.rs
dayxx_macro/: Cargo.toml
dayxx_macro/src/: lib.rs
docker/: Dockerfile
