[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = [
    "blocking",
    "rustls-tls",
    "cookies",
], optional = true }
generate_aoc_day = { git = "https://github.com/ViddeM/aoc-macro", branch = "main" }

[features]
default = ["download_input"]
download_input = ["dep:reqwest"]
